// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for edit resource: comment field 1`] = `
<textarea
  class="ant-input css-dev-only-do-not-override-k7429z"
  id="comment"
  placeholder="Enter comment"
  rows="2"
>
  ANC Service
</textarea>
`;

exports[`renders correctly for edit resource: name field 1`] = `
<input
  aria-required="true"
  class="ant-input css-dev-only-do-not-override-k7429z"
  id="name"
  placeholder="Name"
  type="text"
  value="ANC Service"
/>
`;

exports[`renders correctly for new resource: comment field 1`] = `
<textarea
  class="ant-input css-dev-only-do-not-override-k7429z"
  id="comment"
  placeholder="Enter comment"
  rows="2"
/>
`;

exports[`renders correctly for new resource: name field 1`] = `
<input
  aria-required="true"
  class="ant-input css-dev-only-do-not-override-k7429z"
  id="name"
  placeholder="Name"
  type="text"
  value=""
/>
`;
